# mtg-dmu-card-list

./: Makefile  main.py  pyproject.toml
