[tool.poetry]
name = "mtg-dmu-card-list"
version = "0.1.0"
description = ""
authors = ["koluku <koluku@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
